--- a/JBONKS.kv
+++ b/JBONKS.kv
@@ -11,7 +11,7 @@ WindowManager:
         spacing: '5dp'
         cols: 1
         Image:
-            source:"JBLOGO.png"
+            source:"jbonkslogo.png"
         Label:
             text:'JBONKS'
             color: 0,0,0,1
