--- a/jbonks.kv
+++ b/jbonks.kv
@@ -1,15 +1,8 @@
-# JBONKS
-ecommerce mobile application
-
-
-norien po ito
-
-
-""""MDScreen:
+MDScreen:
     md_bg_color : [212/255, 17/255, 12/255, 1]
     MDCard :
         size_hint : None,None
         size : 200,300
         pos_hint : {"center_x" : .5, "center_y" :.5}
         elevation : 2
-        md_bg_color : [212/255, 13/255, 11/255, 1]""""
+        md_bg_color : [255/255, 0/255, 0/255, 1]
