--- a/signup.kv
+++ b/signup.kv
@@ -1,4 +1,4 @@
-MDScreen:
+MDScreen: #DESIGNED BY MCBEN PRECILLA
     name: "signup" #the name of the screen to be called
     MDFloatLayout: #a group or component of the back button, labels
         md_bg_color: 1,1,1,1
